--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,6 +6,39 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-menu side="start" type="overlay" menuId="custom" contentId="main" class="my-custom-menu">
+  <ion-header>
+    <ion-toolbar color="tertiary">
+      <ion-title>Custom Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <!-- <h1>Passed Values Example</h1>
+      <p>email: {{ email.value }}</p>
+      <p>password: {{ password.value }}</p> -->
+    <ion-list>
+      <ion-item>
+        <ion-menu-button color="primary" [routerLink]="['/login']"><ion-icon name="log-in-outline"></ion-icon></ion-menu-button>
+        <ion-label>Login</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-menu-button color="secondary" [routerLink]="['/registration']">
+          <ion-icon name="person-add-outline"></ion-icon>
+        </ion-menu-button>
+        <ion-label>Sign Up</ion-label>
+      </ion-item>
+      <ion-item>
+          <ion-menu-button color="secondary" [routerLink]="['/about']">
+            <ion-icon name="information-circle-outline">
+          </ion-icon>
+        </ion-menu-button>
+        <ion-label>About</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-router-outlet id="main"></ion-router-outlet>
 <ion-content [fullscreen]="true">
   <ion-header translucent>
     <ion-toolbar>
