--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -15,6 +15,8 @@
           <ion-thumbnail>
             <img src="assets/img/satoru.png" alt="profile-pic" class="profile-pic">
           </ion-thumbnail>
+          <ion-button type="submit" (click)="authService.SignOut()" expand="block">Logout</ion-button>
+          
         </div>
        
         <div class="card-body">
